Reran forests with correct confusion calculations
 Changes to be committed:
	modified:   test_EIF.ipynb
	modified:   test_FBIF.ipynb
	modified:   test_IsolationForest.ipynb
	modified:   test_SCiF.ipynb
	modified:   turtleIsolationForests/FBIF.py
	new file:   turtleIsolationForests/printResults.py

--- a/test_FBIF.ipynb
+++ b/test_FBIF.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from turtleIsolationForests.FBIF import FBIsolationForest\n",
+    "from turtleIsolationForests.printResults import print_results\n",
     "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +413,7 @@
        "[125973 rows x 47 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +844,7 @@
        "[125973 rows x 46 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +869,7 @@
        "0.4654171925730117"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,16 +881,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<turtleIsolationForests.FBIF.FBIsolationForest at 0x2b7e4ad5d20>"
+       "<turtleIsolationForests.FBIF.FBIsolationForest at 0x2b7e7753400>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -902,16 +903,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.29164825161844515"
+       "0.29134111621768616"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -963,31 +964,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.292235</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0.291341</td>\n",
+       "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.291580</td>\n",
+       "      <td>0.291341</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.291648</td>\n",
+       "      <td>0.291341</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.293167</td>\n",
+       "      <td>0.292757</td>\n",
        "      <td>True</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.297862</td>\n",
+       "      <td>0.302894</td>\n",
        "      <td>True</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -999,32 +1000,32 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22539</th>\n",
-       "      <td>0.291648</td>\n",
+       "      <td>0.291341</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22540</th>\n",
-       "      <td>0.291648</td>\n",
+       "      <td>0.291341</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22541</th>\n",
-       "      <td>0.291648</td>\n",
+       "      <td>0.291341</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22542</th>\n",
-       "      <td>0.291648</td>\n",
+       "      <td>0.291341</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22543</th>\n",
-       "      <td>0.291580</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0.292887</td>\n",
+       "      <td>True</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1034,22 +1035,22 @@
       ],
       "text/plain": [
        "       anomaly_score  predicted_as_anomaly  is_normal\n",
-       "0           0.292235                  True          0\n",
-       "1           0.291580                 False          0\n",
-       "2           0.291648                 False          1\n",
-       "3           0.293167                  True          0\n",
-       "4           0.297862                  True          0\n",
+       "0           0.291341                 False          0\n",
+       "1           0.291341                 False          0\n",
+       "2           0.291341                 False          1\n",
+       "3           0.292757                  True          0\n",
+       "4           0.302894                  True          0\n",
        "...              ...                   ...        ...\n",
-       "22539       0.291648                 False          1\n",
-       "22540       0.291648                 False          1\n",
-       "22541       0.291648                 False          0\n",
-       "22542       0.291648                 False          1\n",
-       "22543       0.291580                 False          0\n",
+       "22539       0.291341                 False          1\n",
+       "22540       0.291341                 False          1\n",
+       "22541       0.291341                 False          0\n",
+       "22542       0.291341                 False          1\n",
+       "22543       0.292887                  True          0\n",
        "\n",
        "[22544 rows x 3 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1097,37 +1098,37 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>0.295838</td>\n",
+       "      <td>0.295526</td>\n",
        "      <td>0.430758</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.016495</td>\n",
+       "      <td>0.015910</td>\n",
        "      <td>0.495193</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>0.291580</td>\n",
+       "      <td>0.291341</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>0.291648</td>\n",
+       "      <td>0.291341</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>0.291648</td>\n",
+       "      <td>0.291341</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>0.292303</td>\n",
+       "      <td>0.291341</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>0.395012</td>\n",
+       "      <td>0.390833</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1137,16 +1138,16 @@
       "text/plain": [
        "       anomaly_score     is_normal\n",
        "count   22544.000000  22544.000000\n",
-       "mean        0.295838      0.430758\n",
-       "std         0.016495      0.495193\n",
-       "min         0.291580      0.000000\n",
-       "25%         0.291648      0.000000\n",
-       "50%         0.291648      0.000000\n",
-       "75%         0.292303      1.000000\n",
-       "max         0.395012      1.000000"
+       "mean        0.295526      0.430758\n",
+       "std         0.015910      0.495193\n",
+       "min         0.291341      0.000000\n",
+       "25%         0.291341      0.000000\n",
+       "50%         0.291341      0.000000\n",
+       "75%         0.291341      1.000000\n",
+       "max         0.390833      1.000000"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1157,32 +1158,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "precision: 0.5\n",
-      "recall: 0.6576978269782697\n",
-      "f1-score: 0.568108371331179\n"
+      "true anomalies: 4597\n",
+      "false anomalies: 8236\n",
+      "false normals: 9021\n",
+      "true normals: 690\n",
+      "precision: 0.3582170965479623\n",
+      "recall: 0.3375679248054046\n",
+      "f1-score: 0.3475861026048164\n"
      ]
     }
    ],
    "source": [
-    "true_anomaly = len(predictions[predictions['is_normal'] == 0 & (predictions['predicted_as_anomaly'] == True)])\n",
-    "false_anomaly = len(predictions[predictions['is_normal'] == 0 & (predictions['predicted_as_anomaly'] == False)])\n",
-    "false_normal = len(predictions[predictions['is_normal'] == 1 & (predictions['predicted_as_anomaly'] == True)])\n",
-    "true_normal = len(predictions[predictions['is_normal'] == 1 & (predictions['predicted_as_anomaly'] == False)])\n",
-    "\n",
-    "precision = true_anomaly / (true_anomaly + false_anomaly)\n",
-    "recall = true_anomaly / (true_anomaly + false_normal)\n",
-    "f1 = 2 * precision * recall / (precision + recall)\n",
-    "\n",
-    "print(\"precision: \" + str(precision))\n",
-    "print(\"recall: \" + str(recall))\n",
-    "print(\"f1-score: \" + str(f1))"
+    "print_results(predictions)"
    ]
   },
   {
