--- a/test_SCiF.ipynb
+++ b/test_SCiF.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from turtleIsolationForests.sciForest import SCIsolationForest\n",
+    "from turtleIsolationForests.printResults import print_results\n",
     "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +413,7 @@
        "[125973 rows x 47 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +844,7 @@
        "[125973 rows x 46 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +869,7 @@
        "0.4654171925730117"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,16 +881,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<turtleIsolationForests.sciForest.SCIsolationForest at 0x21be543ba60>"
+       "<turtleIsolationForests.sciForest.SCIsolationForest at 0x21be64cb220>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -902,16 +903,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3396750812035645"
+       "0.3390560719187912"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -963,31 +964,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.377422</td>\n",
+       "      <td>0.388611</td>\n",
        "      <td>True</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.374047</td>\n",
+       "      <td>0.386894</td>\n",
        "      <td>True</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.326281</td>\n",
+       "      <td>0.336719</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.358385</td>\n",
+       "      <td>0.371947</td>\n",
        "      <td>True</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.473114</td>\n",
+       "      <td>0.473750</td>\n",
        "      <td>True</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -999,31 +1000,31 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22539</th>\n",
-       "      <td>0.318978</td>\n",
+       "      <td>0.324198</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22540</th>\n",
-       "      <td>0.319120</td>\n",
+       "      <td>0.324371</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22541</th>\n",
-       "      <td>0.321168</td>\n",
+       "      <td>0.332518</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22542</th>\n",
-       "      <td>0.326027</td>\n",
+       "      <td>0.335481</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22543</th>\n",
-       "      <td>0.416879</td>\n",
+       "      <td>0.431535</td>\n",
        "      <td>True</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -1034,22 +1035,22 @@
       ],
       "text/plain": [
        "       anomaly_score  predicted_as_anomaly  is_normal\n",
-       "0           0.377422                  True          0\n",
-       "1           0.374047                  True          0\n",
-       "2           0.326281                 False          1\n",
-       "3           0.358385                  True          0\n",
-       "4           0.473114                  True          0\n",
+       "0           0.388611                  True          0\n",
+       "1           0.386894                  True          0\n",
+       "2           0.336719                 False          1\n",
+       "3           0.371947                  True          0\n",
+       "4           0.473750                  True          0\n",
        "...              ...                   ...        ...\n",
-       "22539       0.318978                 False          1\n",
-       "22540       0.319120                 False          1\n",
-       "22541       0.321168                 False          0\n",
-       "22542       0.326027                 False          1\n",
-       "22543       0.416879                  True          0\n",
+       "22539       0.324198                 False          1\n",
+       "22540       0.324371                 False          1\n",
+       "22541       0.332518                 False          0\n",
+       "22542       0.335481                 False          1\n",
+       "22543       0.431535                  True          0\n",
        "\n",
        "[22544 rows x 3 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1097,37 +1098,37 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>0.368673</td>\n",
+       "      <td>0.376048</td>\n",
        "      <td>0.430758</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.069611</td>\n",
+       "      <td>0.071084</td>\n",
        "      <td>0.495193</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>0.317404</td>\n",
+       "      <td>0.322910</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>0.320330</td>\n",
+       "      <td>0.327751</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>0.339769</td>\n",
+       "      <td>0.343598</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>0.384127</td>\n",
+       "      <td>0.391411</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>0.758644</td>\n",
+       "      <td>0.757228</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1137,16 +1138,16 @@
       "text/plain": [
        "       anomaly_score     is_normal\n",
        "count   22544.000000  22544.000000\n",
-       "mean        0.368673      0.430758\n",
-       "std         0.069611      0.495193\n",
-       "min         0.317404      0.000000\n",
-       "25%         0.320330      0.000000\n",
-       "50%         0.339769      0.000000\n",
-       "75%         0.384127      1.000000\n",
-       "max         0.758644      1.000000"
+       "mean        0.376048      0.430758\n",
+       "std         0.071084      0.495193\n",
+       "min         0.322910      0.000000\n",
+       "25%         0.327751      0.000000\n",
+       "50%         0.343598      0.000000\n",
+       "75%         0.391411      1.000000\n",
+       "max         0.757228      1.000000"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1157,32 +1158,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "precision: 0.5\n",
-      "recall: 0.748018186057356\n",
-      "f1-score: 0.5993648124795666\n"
+      "true anomalies: 10097\n",
+      "false anomalies: 2736\n",
+      "false normals: 7475\n",
+      "true normals: 2236\n",
+      "precision: 0.7867996571339515\n",
+      "recall: 0.574607329842932\n",
+      "f1-score: 0.6641670777832593\n"
      ]
     }
    ],
    "source": [
-    "true_anomaly = len(predictions[predictions['is_normal'] == 0 & (predictions['predicted_as_anomaly'] == True)])\n",
-    "false_anomaly = len(predictions[predictions['is_normal'] == 0 & (predictions['predicted_as_anomaly'] == False)])\n",
-    "false_normal = len(predictions[predictions['is_normal'] == 1 & (predictions['predicted_as_anomaly'] == True)])\n",
-    "true_normal = len(predictions[predictions['is_normal'] == 1 & (predictions['predicted_as_anomaly'] == False)])\n",
-    "\n",
-    "precision = true_anomaly / (true_anomaly + false_anomaly)\n",
-    "recall = true_anomaly / (true_anomaly + false_normal)\n",
-    "f1 = 2 * precision * recall / (precision + recall)\n",
-    "\n",
-    "print(\"precision: \" + str(precision))\n",
-    "print(\"recall: \" + str(recall))\n",
-    "print(\"f1-score: \" + str(f1))"
+    "print_results(predictions)"
    ]
   },
   {
