--- a/test_EIF.ipynb
+++ b/test_EIF.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "import pandas as pd\n",
     "from turtleIsolationForests.extendedIsolationForest import IsolationForest, ExtendedIsolationForest\n",
+    "from turtleIsolationForests.printResults import print_results\n",
     "from sklearn.preprocessing import StandardScaler"
    ]
   },
@@ -886,7 +887,7 @@
     {
      "data": {
       "text/plain": [
-       "<turtleIsolationForests.extendedIsolationForest.ExtendedIsolationForest at 0x16ccacecbe0>"
+       "<turtleIsolationForests.extendedIsolationForest.ExtendedIsolationForest at 0x1300d80dd80>"
       ]
      },
      "execution_count": 6,
@@ -908,7 +909,7 @@
     {
      "data": {
       "text/plain": [
-       "0.4068322332847862"
+       "0.3979007682828613"
       ]
      },
      "execution_count": 7,
@@ -963,31 +964,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.462874</td>\n",
+       "      <td>0.452695</td>\n",
        "      <td>True</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.462425</td>\n",
+       "      <td>0.452695</td>\n",
        "      <td>True</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.380672</td>\n",
+       "      <td>0.386584</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.407494</td>\n",
+       "      <td>0.411579</td>\n",
        "      <td>True</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.484892</td>\n",
+       "      <td>0.479298</td>\n",
        "      <td>True</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -999,31 +1000,31 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22539</th>\n",
-       "      <td>0.374309</td>\n",
+       "      <td>0.376628</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22540</th>\n",
-       "      <td>0.369690</td>\n",
+       "      <td>0.372050</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22541</th>\n",
-       "      <td>0.403347</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0.410521</td>\n",
+       "      <td>True</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22542</th>\n",
-       "      <td>0.374475</td>\n",
+       "      <td>0.371872</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22543</th>\n",
-       "      <td>0.488785</td>\n",
+       "      <td>0.477714</td>\n",
        "      <td>True</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -1034,17 +1035,17 @@
       ],
       "text/plain": [
        "       anomaly_score  predicted_as_anomaly  is_normal\n",
-       "0           0.462874                  True          0\n",
-       "1           0.462425                  True          0\n",
-       "2           0.380672                 False          1\n",
-       "3           0.407494                  True          0\n",
-       "4           0.484892                  True          0\n",
+       "0           0.452695                  True          0\n",
+       "1           0.452695                  True          0\n",
+       "2           0.386584                 False          1\n",
+       "3           0.411579                  True          0\n",
+       "4           0.479298                  True          0\n",
        "...              ...                   ...        ...\n",
-       "22539       0.374309                 False          1\n",
-       "22540       0.369690                 False          1\n",
-       "22541       0.403347                 False          0\n",
-       "22542       0.374475                 False          1\n",
-       "22543       0.488785                  True          0\n",
+       "22539       0.376628                 False          1\n",
+       "22540       0.372050                 False          1\n",
+       "22541       0.410521                  True          0\n",
+       "22542       0.371872                 False          1\n",
+       "22543       0.477714                  True          0\n",
        "\n",
        "[22544 rows x 3 columns]"
       ]
@@ -1097,37 +1098,37 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>0.412654</td>\n",
+       "      <td>0.410781</td>\n",
        "      <td>0.430758</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.043317</td>\n",
+       "      <td>0.039548</td>\n",
        "      <td>0.495193</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>0.364957</td>\n",
+       "      <td>0.368838</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>0.374505</td>\n",
+       "      <td>0.377717</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>0.396393</td>\n",
+       "      <td>0.397928</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>0.457314</td>\n",
+       "      <td>0.443800</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>0.592268</td>\n",
+       "      <td>0.628150</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1137,13 +1138,13 @@
       "text/plain": [
        "       anomaly_score     is_normal\n",
        "count   22544.000000  22544.000000\n",
-       "mean        0.412654      0.430758\n",
-       "std         0.043317      0.495193\n",
-       "min         0.364957      0.000000\n",
-       "25%         0.374505      0.000000\n",
-       "50%         0.396393      0.000000\n",
-       "75%         0.457314      1.000000\n",
-       "max         0.592268      1.000000"
+       "mean        0.410781      0.430758\n",
+       "std         0.039548      0.495193\n",
+       "min         0.368838      0.000000\n",
+       "25%         0.377717      0.000000\n",
+       "50%         0.397928      0.000000\n",
+       "75%         0.443800      1.000000\n",
+       "max         0.628150      1.000000"
       ]
      },
      "execution_count": 10,
@@ -1164,35 +1165,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "precision: 0.5\n",
-      "recall: 0.7540396027968741\n",
-      "f1-score: 0.6012885088438562\n"
+      "true anomalies: 10092\n",
+      "false anomalies: 2741\n",
+      "false normals: 8521\n",
+      "true normals: 1190\n",
+      "precision: 0.786410036624328\n",
+      "recall: 0.5422016869929619\n",
+      "f1-score: 0.6418622400305286\n"
      ]
     }
    ],
    "source": [
-    "true_anomaly = len(predictions[predictions['is_normal'] == 0 & (predictions['predicted_as_anomaly'] == True)])\n",
-    "false_anomaly = len(predictions[predictions['is_normal'] == 0 & (predictions['predicted_as_anomaly'] == False)])\n",
-    "false_normal = len(predictions[predictions['is_normal'] == 1 & (predictions['predicted_as_anomaly'] == True)])\n",
-    "true_normal = len(predictions[predictions['is_normal'] == 1 & (predictions['predicted_as_anomaly'] == False)])\n",
-    "\n",
-    "precision = true_anomaly / (true_anomaly + false_anomaly)\n",
-    "recall = true_anomaly / (true_anomaly + false_normal)\n",
-    "f1 = 2 * precision * recall / (precision + recall)\n",
-    "\n",
-    "print(\"precision: \" + str(precision))\n",
-    "print(\"recall: \" + str(recall))\n",
-    "print(\"f1-score: \" + str(f1))"
+    "print_results(predictions)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "best f1 so far: .64"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#beat f1 of .59?"
-   ]
+   "source": []
   }
  ],
  "metadata": {
