--- a/test_EIF_auto.ipynb
+++ b/test_EIF_auto.ipynb
@@ -439,48 +439,27 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.4654171925730117"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "contamination = sum(train_labels == 0) / len(train_labels)\n",
-    "contamination"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Threshold: 0.4012869932627152\n",
-      "true anomalies: 9862\n",
-      "false anomalies: 2971\n",
-      "false normals: 8777\n",
-      "true normals: 934\n",
-      "precision: 0.7684874931816411\n",
-      "recall: 0.5291056387145233\n",
-      "f1-score: 0.626715810879512\n"
+      "Threshold: 0.40637812713184107\n",
+      "true anomalies: 9838\n",
+      "false anomalies: 2995\n",
+      "false normals: 8828\n",
+      "true normals: 883\n",
+      "precision: 0.7666173147354477\n",
+      "recall: 0.5270545376620593\n",
+      "f1-score: 0.6246547509444744\n"
      ]
     }
    ],
    "source": [
-    "model = ExtendedIsolationForest(contamination = contamination, random_state = None)\n",
-    "model.fit(X_train, train_labels)\n",
-    "print(\"Threshold: \" + str(model.threshold))\n",
-    "predictions = model.predict(X_test)\n",
-    "predictions['is_normal'] = test_labels\n",
-    "print_results(predictions)"
+    "automodel = ExtendedIsolationForest(random_state = None)\n",
+    "automodel.fit(X_train, train_labels)\n",
+    "print(\"Threshold: \" + str(automodel.threshold))\n",
+    "autopredictions = automodel.predict(X_test)\n",
+    "autopredictions['is_normal'] = test_labels\n",
+    "print_results(autopredictions)"
    ]
   },
   {
@@ -488,7 +467,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "best f1 so far: .653"
+    "best auto-thresholded f1 so far: 0.723"
    ]
   },
   {
