Small upgrade to FBIF, now picks random point as sphere center
Also latest runs of notebooks.

 Changes to be committed:
	modified:   test_EIF_auto.ipynb
	modified:   test_FBIF.ipynb
	modified:   test_FBIF_auto.ipynb
	modified:   turtleIsolationForests/FBIF.py
	modified:   turtleIsolationForests/sciForest.py

--- a/test_EIF_auto.ipynb
+++ b/test_EIF_auto.ipynb
@@ -442,14 +442,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Threshold: 0.40637812713184107\n",
-      "true anomalies: 9838\n",
-      "false anomalies: 2995\n",
-      "false normals: 8828\n",
-      "true normals: 883\n",
-      "precision: 0.7666173147354477\n",
-      "recall: 0.5270545376620593\n",
-      "f1-score: 0.6246547509444744\n"
+      "Finished building forest\n",
+      "Finished calculating threshold\n",
+      "Threshold: 0.39441573426143955\n",
+      "true anomalies: 10925\n",
+      "false anomalies: 1908\n",
+      "false normals: 7845\n",
+      "true normals: 1866\n",
+      "precision: 0.8513208135276241\n",
+      "recall: 0.5820458177943527\n",
+      "f1-score: 0.691390057905895\n"
      ]
     }
    ],
@@ -467,7 +469,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "best auto-thresholded f1 so far: 0.723"
+    "best auto-thresholded f1 so far: 0.723\n",
+    "\n",
+    "Threshold: 0.39441573426143955\n",
+    "\n",
+    "true anomalies: 10925\n",
+    "\n",
+    "false anomalies: 1908\n",
+    "\n",
+    "false normals: 7845\n",
+    "\n",
+    "true normals: 1866\n",
+    "\n",
+    "precision: 0.8513208135276241\n",
+    "\n",
+    "recall: 0.5820458177943527\n",
+    "\n",
+    "f1-score: 0.691390057905895"
    ]
   },
   {
