--- a/test_FBIF_auto.ipynb
+++ b/test_FBIF_auto.ipynb
@@ -442,14 +442,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Threshold: 0.2920957857420534\n",
-      "true anomalies: 6081\n",
-      "false anomalies: 6752\n",
-      "false normals: 8655\n",
-      "true normals: 1056\n",
-      "precision: 0.47385646380425467\n",
-      "recall: 0.4126628664495114\n",
-      "f1-score: 0.44114766585657805\n"
+      "Finished building forest\n",
+      "Finished calculating threshold\n",
+      "Threshold: 0.3444520124531282\n",
+      "true anomalies: 11566\n",
+      "false anomalies: 1267\n",
+      "false normals: 6075\n",
+      "true normals: 3636\n",
+      "precision: 0.9012701628613731\n",
+      "recall: 0.6556317669066379\n",
+      "f1-score: 0.7590733083940409\n"
      ]
     }
    ],
@@ -467,7 +469,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "best auto f1 so far: 0.44"
+    "best auto f1 so far: 0.759\n",
+    "\n",
+    "Threshold: 0.3444520124531282\n",
+    "\n",
+    "true anomalies: 11566\n",
+    "\n",
+    "false anomalies: 1267\n",
+    "\n",
+    "false normals: 6075\n",
+    "\n",
+    "true normals: 3636\n",
+    "\n",
+    "precision: 0.9012701628613731\n",
+    "\n",
+    "recall: 0.6556317669066379\n",
+    "\n",
+    "f1-score: 0.7590733083940409"
    ]
   },
   {
